# Gazprom_id_people

./: .gitignore  README.md  docker-compose.production.yml  env 
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/api/: pagination.py  permissions.py  urls.py  utils.py
backend/api/serializers/: __init__.py  company_structure.py  company_team.py  company_unit.py  component.py  contacts.py  employee.py  employee_status.py  office.py  position.py  progress_status.py  project.py  service.py  skill.py  tag.py  team_member.py  timezone.py
backend/api/views/: __init_.py  __init__.py  company_structure.py  company_team.py  company_unit.py  component.py  employee.py  employee_status.py  office.py  position.py  progress_status.py  project.py  service.py  skill.py  tag.py  timezone.py
backend/apps/business/: admin.py  apps.py
backend/apps/business/models/: __init__.py  project.py  work_tag.py
backend/apps/company_structure/: admin.py  apps.py
backend/apps/company_structure/migrations/: 0001_initial.py  0002_initial.py
backend/apps/company_structure/models/: __init__.py  company.py  department.py  office.py  position.py  team.py  unit.py
backend/apps/core/: models.py  utils.py
backend/apps/core/fixtures/: company.json  company_team.json  company_unit.json  component.json  department.json  tag.json  (+11 more)
backend/apps/projects/: admin.py  apps.py  signals.py
backend/apps/skills/: apps.py  models.py
backend/apps/staff/: admin.py  apps.py  managers.py  signals.py
backend/apps/users/: admin.py  models.py
backend/config/: settings.py  urls.py
(+39 files in other folders)
