[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tatiana Belova <tanja5676@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
python-dotenv = "^1.0.1"
django-phonenumbers = "^1.0.1"
django-phonenumber-field = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
